2004-03-08  Ulrich Drepper  <drepper@redhat.com>


	* sysdeps/unix/sysv/linux/i386/vfork.S: If SAVE_PID and
	RESTORE_PID are defined, use it.
	* sysdeps/unix/sysv/linux/x86_64/vfork.S: Likewise.

	* sysdeps/posix/gai_strerror.c: Add error string for EAI_IDN_ENCODE.

	* Makerules: Use extra-modules.mk if modules-names is defined.
	* extra-modules.mk: New file.
	* dlfcn/Makefile (CPPFLAGS-modcxaatexit.c): Removed.
	* elf/Makefile (CFLAGS-interp.c): Add -DNOT_IN_libc=1.
	* csu/Makefile ($(objpfx)version-info.h): Pass -DNOT_IN_libc=1 to
	compiler.
	* Makefile (distribute): Add symbol-hacks.h and extra-modules.mk.
	* sysdeps/generic/symbol-hacks.h: New file.
	* sysdeps/wordsize-32/symbol-hacks.h: New file.
	* sysdeps/wordsize-32/divdi3.c: Define *_internal aliases for __divdi3,
	__moddi3, __udivdi3, and __umoddi3.
	* include/libc-symbols.h: Include <symbol-hacks.h>.

2004-03-08  Jeroen Dekkers  <jeroen@dekkers.cx>

	* elf/rtld.c (_rtld_global_ro) [MAP_COPY]: Don't set _dl_unload_cache.

	* sysdeps/mach/hurd/dl-sysdep.c (_dl_important_hwcaps):
	Don't use INTUSE with _dl_signal_error.

2004-03-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-machine.c (_dl_reloc_overflow):
	Don't use INTUSE with _dl_signal_error.

2004-03-08  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/soft-fp/ots_cvtxt.c (_OtsConvertFloatXT): Fix typo
	in name.

2004-03-07  Ulrich Drepper  <drepper@redhat.com>

	* config.h.in: Add entry for HAVE_LIBIDN.
	* configure.in: If libidn add-on present define HAVE_LIBIDN.
	* Versions.def: Add entry for libcidn.

2004-03-07  Simon Josefsson  <jas@extundo.com>

	* resolv/netdb.h [__USE_GNU]: Add new AI_IDN ai_flags for addrinfo.
	[__USE_GNU]: Add new error code EAI_IDN_ENCODE for getaddrinfo.
	* sysdeps/posix/getaddrinfo.c: Add prototype for __idna_to_ascii_lz
	and define IDNA_SUCCESS.
	(gaih_inet): If ai_flags have AI_IDN, invoke __idna_to_ascii_lz.
	(getaddrinfo): Fix EAI_BADFLAGS test to include AI_IDN.